--- a/config.yml
+++ b/config.yml
@@ -1,11 +1,11 @@
     #Url of the site to be proxied
-URL: "cbufaces.cairnrepo.org"
+URL: "https://cbufaces.cairnrepo.org"
 
     #Root assets folder (contains /css/, /js/ etc)
 ASSETS_DIR: "dist/assets"
 
     #Path on server to remote assets folder (escape the slashes; no trailing slash)
-REMOTE_ASSETS_PATH: "http://cbufaces.cairnrepo.org/sites/cbufaces.cairnrepo.org/themes/cbu_scholar/dist/assets"
+REMOTE_ASSETS_PATH: "https://cbufaces.cairnrepo.org/sites/cbufaces.cairnrepo.org/themes/cbu_scholar/dist/assets"
 
 LOCALPROXY: "http://drupal7.dev/"
 
